--- a/src/views/main/index.njk
+++ b/src/views/main/index.njk
@@ -7,5 +7,8 @@
     <a href="/auth/login">Log in with GitHub</a>
   {% else %}
     <a href="#">Go to the dashboard</a>
+    <a href="/auth/logout">Log out</a>
   {% endif %}
+
+
 {% endblock %}
