Create dashboard route

--- a/src/views/main/index.njk
+++ b/src/views/main/index.njk
@@ -10,7 +10,7 @@
   {% if not loggedIn %}
     <a href="/auth/login">Log in with GitHub</a>
   {% else %}
-    <a href="#">Go to the dashboard</a>
+    <a href="/dashboard">Go to the dashboard</a>
     <a href="/auth/logout">Log out</a>
   {% endif %}
 {% endblock %}
