Move the logout link to base.njk

--- a/src/views/base.njk
+++ b/src/views/base.njk
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="styles/base.css" />
   </head>
   <body>
+    <a href="/auth/logout">Log out</a> 
+    
     {% block content %}{% endblock %}
   </body>
 </html>
