Create categories controller

--- a/src/views/categories/all.njk
+++ b/src/views/categories/all.njk
@@ -1,11 +1,9 @@
 {% extends 'base.njk' %}
 
 {% block title %}
-  Dashboard
+  Your repo categories
 {% endblock %}
 
 {% block content %}
-  <h1>Dashboard</h1>
-
-  <a href="/categories">Manage your categories</a>
+  <h1>Your repo categories</h1>
 {% endblock %}
