--- a/src/views/dashboard/index.njk
+++ b/src/views/dashboard/index.njk
@@ -7,5 +7,5 @@
 {% block content %}
   <h1>Dashboard</h1>
 
-  <a href="/categories">Manage your categories</a>
+  <a href="/groups">Manage your repo groups</a>
 {% endblock %}
