--- a/src/views/groups/all.njk
+++ b/src/views/groups/all.njk
@@ -1,9 +1,9 @@
 {% extends 'base.njk' %}
 
 {% block title %}
-  Your repo categories
+  Your repo groups
 {% endblock %}
 
 {% block content %}
-  <h1>Your repo categories</h1>
+  <h1>Your repo groups</h1>
 {% endblock %}
