Move the `Create a group` link

--- a/src/views/groups/all.njk
+++ b/src/views/groups/all.njk
@@ -7,6 +7,8 @@
 {% block content %}
   <h1>Your repo groups</h1>
 
+  <a href="/groups/new">Create a group</a>
+
   <ul>
     {% for group in groups %}
       <li>{{ group.name }}</li>
@@ -15,7 +17,7 @@
 
   {% if not groups %}
     <p>
-      You don't have any groups. <a href="#">Create one?</a>
+      You don't have any groups.
     </p>
   {% endif %}
 {% endblock %}
