Set the length of a group name to 3-30

--- a/src/views/groups/new.njk
+++ b/src/views/groups/new.njk
@@ -10,7 +10,7 @@
   <form method="POST">
     <input type="hidden" name="_csrf" value="{{ csrfToken }}" />
 
-    <label for="name">Group name</label>
+    <label for="name">Group name (3-30 characters)</label>
     <input id="name" name="name" required />
 
     <input type="submit" value="Create" />
