--- a/src/views/base.njk
+++ b/src/views/base.njk
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}{% endblock %} - GitFave</title>
-    <link rel="stylesheet" href="styles/base.css" />
+    <link rel="stylesheet" href="/styles/base.css" />
   </head>
   <body>
     <a href="/auth/logout">Log out</a> 
